spade-tests/src/snapshots/spade_tests__ast_lowering__impl_trait_type_cannot_be_passed_as_generic_arguments.snap
---
source: spade-tests/src/ast_lowering.rs
---
trait T {}
struct X<P> {}
impl X<impl T> {}


error: `impl Trait` syntax cannot be used in this context
  ┌─ testinput:3:8
  │
3 │ impl X<impl T> {}
  │        ^^^^^^ `impl Trait` type cannot be used in this context
  │
  = note: `impl Trait` can only be used inside unit parameters
